* License changes and readme update urls

--- a/README.mkd
+++ b/README.mkd
@@ -1,8 +1,8 @@
 <!--header-->
 <!-- Auto generated do not modify between `header` and `/header` -->
 
-# <a href="http://maslosoft.com/zamm/">Maslosoft Zamm</a>
-<a href="http://maslosoft.com/zamm/">_Zamm is a documentation tool_</a>
+# <a href="https://maslosoft.com/zamm/">Maslosoft Zamm</a>
+<a href="https://maslosoft.com/zamm/">_Zamm is a documentation tool_</a>
 
 <a href="https://packagist.org/packages/maslosoft/zamm" title="Latest Stable Version">
 <img src="https://poser.pugx.org/maslosoft/zamm/v/stable.svg" alt="Latest Stable Version" style="height: 20px;"/>
@@ -11,10 +11,11 @@
 <img src="https://poser.pugx.org/maslosoft/zamm/license.svg" alt="License" style="height: 20px;"/>
 </a>
 [![Scrutinizer Code Quality](https://scrutinizer-ci.com/g/Maslosoft/Zamm/badges/quality-score.png?b=master)](https://scrutinizer-ci.com/g/Maslosoft/Zamm/?branch=master)
+[![Code Coverage](https://scrutinizer-ci.com/g/Maslosoft/Zamm/badges/coverage.png?b=master)](https://scrutinizer-ci.com/g/Maslosoft/Zamm/?branch=master)
 
 ### Quick Install
 ```bash
-composer require maslosoft/zamm:"*"
+composer require maslosoft/zamm
 ```
 
 <!--/header-->
